# DataTable-MCP

./: .clauderc.json  .dockerignore  .env.docker  .env.example  .gitignore  .justfile  CLAUDE.md  Dockerfile  README.md  TOOLS.md  debug_endpoints.py  docker-compose.yml  docs_server.py  generate_mcp_openapi.py  generate_openapi.py  generate_sheets_urls.py  invalid-sheets-uri  main.py  openapi.json  openapi_basic.json  pyproject.toml  reference.md  requirement.md  setup_google_sheets_env.py  test_basic_hts.py
core/: __init__.py  auth_models.py  error.py  factory.py  logging_config.py  server.py  settings.py
datatable_tools/: __init__.py  advanced_tools.py  data_exporters.py  data_sources.py  detailed_tools.py  export_tools.py  formula_adapter.py  google_sheets_helpers.py  lifecycle_tools.py  manipulation_tools.py  mcp_tools.py  models.py  query_tools.py  range_operations.py  session_tools.py  spreadsheet_client.py  spreadsheet_models.py  table_manager.py  tool_registry.py  utils.py
docs/: GOOGLE_SHEETS_SETUP.md  LOCAL_IMPLEMENTATION_SUMMARY.md  REQUIREMENTS_COMPLETION_STATUS.md  TESTS_SUMMARY.md  TEST_URL_IMPROVEMENT_SUMMARY.md  TOOLS-simpify.md  TOOLS-spec.md  TOOLS.md  docker.md  improve-sheet-input.md  integration_summary.md  refine.md  requirement-auth.md  requirement-new-auth.md  requirement-refine-writesheet-rangeupdate.md  requirement_intergration.md  requirement_intergration_improvement.md  simpify-code-refactor.md  tools-naming-improvement.md
reference/: llm-chosse-the-right-tool.md
tests/: TEST_RESULTS.md  __init__.py  demo_create_table_formats.py  demo_export_table_formats.py  test_append_columns_enhanced.py  test_append_columns_enhanced_simple.py  test_auto_header_detection.py  test_basic.py  test_composite_key_lookup.py  test_docker.py  (+47 more)
(+14 files in other folders)
